# fusion-recall

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/: RESULTS.md  __init__.py  beir.py
eval/: __init__.py  dataset.py  metrics.py  run.py
fusion_recall/: __init__.py  bm25.py  contracts.py  fusion.py  hybrid.py  rerank.py
tests/: conftest.py  test_bm25.py  test_composition.py  test_contracts.py  test_eval.py  test_fusion.py  test_hybrid.py  test_rerank.py
